# template

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  Template  android.cpp  android.h  android_native_functions.cpp  build  build-data-files  buildDataFiles  buildRelease  button.cpp  button.h  button_events.cpp  button_events.h  button_events_game.cpp  ci-cd.py  cipher.cpp  cipher.h  clean  console.cpp  console.h  console_commands.cpp  console_commands_defs.cpp  cursor.cpp  custom_sound.cpp  custom_sound.h  data_manager_defs.cpp  dev_info.cpp  directories_defs.cpp  engine_glue.cpp  engine_interface.cpp  engine_interface.h  engine_interface_game.cpp  engine_interface_options.cpp  engine_math.cpp  engine_math.h  file_io.cpp  file_io.h  (+78 more)
build-scripts/: build  build-all  build-android  build-linux-x86  build-linux-x86_64  build-windows-x86  build-windows-x86_64  clean-all  clean-android  clean-linux-x86  clean-linux-x86_64  clean-windows-x86  clean-windows-x86_64  make_executable  rebuild-all  rebuild-android  rebuild-linux-x86  rebuild-linux-x86_64  rebuild-windows-x86  rebuild-windows-x86_64  version
data/: engine  game_commands  game_constants  game_controller_db  game_options  window_main_menu  window_notice
data/data/engine/: engine
data/data/options/: game_options
data/data/ui/: animations_gui  cursors
development/: build-system-android-key  build-system-options  build-system-targets  build-system-version  engine-version  refresh-build-date  rename-template  version-change  workflow
development/Template.app/Contents/: Info.plist
development/android/: AndroidManifest.xml  adb-logcat  adb-logcat-all  adb-logcat-all.bat  adb-logcat.bat  android-prep  ant-debug-build.bat  ant-debug-clean.bat  ant-debug-install.bat  ant-debug-rebuild.bat  ant-release-build.bat  ant-release-clean.bat  ant-release-install.bat  build.bat  build.gradle  build.xml  clean  clean.bat  create-asset-lists.bat  gradle.properties  project.properties  repositories.gradle  settings.gradle  versions.gradle
development/android/app/: build.gradle
development/android/app/jni/src/: Android.mk
development/android/app/src/main/: AndroidManifest.xml
development/android/app/src/main/java/org/cheeseandbacon/template/: Game.java
development/android/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java  SDLSurface.java
development/android/app/src/main/res/values/: colors.xml  ids.xml
development/android/build-scripts/linux/: ant-debug-build  ant-debug-clean  ant-debug-install  ant-debug-rebuild  ant-release-build  ant-release-clean  ant-release-install  ant-release-rebuild  build  clean  local.properties  rebuild
development/android/build-scripts/windows/: ant-debug-build.bat  ant-debug-clean.bat  ant-debug-install.bat  ant-debug-rebuild.bat  ant-release-build.bat  ant-release-clean.bat  ant-release-install.bat  ant-release-rebuild.bat  build.bat  clean.bat  local.properties  rebuild.bat
development/android/gradle/wrapper/: gradle-wrapper.properties
development/android/jni/: Application.mk  create-symlinks.bat
development/android/jni/src/: Android.mk  Android.mk.template  create-source-file-list.bat
development/android/res/values/: colors.xml  ids.xml
development/android/src/org/cheeseandbacon/template/: Game.java
development/android/src/org/libsdl/app/: SDLActivity.java
development/build-scripts/: build-android  make-executable  rebuild-android
development/images/: font_small.xcf
development/sounds/: click_1.mmpz  moused_1.mmpz  pause.mmpz
docs/: COPYING.txt  system-requirements.txt  systemRequirements.md
docs/third-party-licenses/: raknet
src/: button_events_game.cpp  dev_info.cpp  engine_glue.cpp  game_constants.h  game_manager_defs.cpp  game_options.cpp  main.cpp  main.h  special_info.cpp  version.cpp
src/console/: console_commands_defs.cpp
src/data/: data_manager_defs.cpp
src/engine/: engine_glue.cpp
src/file/: directories_defs.cpp
src/game/: game.cpp  game.h  game_constants.cpp  game_constants.h  game_data.cpp  game_data.h  game_manager_defs.cpp
src/network/: network_game.cpp  network_game.h
src/options/: game_options.cpp  game_options.h
src/ui/: button_events_game.cpp  dev_info.cpp  game_input_defs.cpp  special_info.cpp  window_close_function.cpp  window_scrolling_buttons.cpp
